--- a/src/components/assets/devices/shared/date-time/style.scss
+++ b/src/components/assets/devices/shared/date-time/style.scss
@@ -3,53 +3,49 @@
 
 // For the styling of the date an time on the left side of the container
 // This is a shared component for all of the devices
+// For the date to the left of the speaker wihtin the iPhone
 
-.device__dt{
+.device__dt--time{
+	margin-left: 10px;
+	font-size: 11px;
 
-	// For the date to the left of the speaker wihtin the iPhone
+	// Center the time within the container
 
-	&--time{
-		margin-left: 10px;
-		font-size: 11px;
+	strong{
+		@extend %display-flex;
+		@extend %flex-center-vertical;
+	}
 
-		// Center the time within the container
+	// For the : in the middle - between the numbers
 
-		strong{
-			@extend %display-flex;
-			@extend %flex-center-vertical;
+	span:nth-child(2){
+		position: relative;
+		display: inline-block;
+		margin: 1px 1px 0px 2px;
+		height: 6px;
+		width: 2px;
+
+		// For the dots as the hour and minute seperator
+
+		&:before, &:after{
+			content: ' ';
+			position: absolute;
+			width: 2px;
+			height: 2px;
+			border-radius: 50%;
+			background: $iphone-black;
 		}
 
-		// For the : in the middle - between the numbers
+		// For the dot on the top of the container
 
-		span:nth-child(2){
-			position: relative;
-			display: inline-block;
-			margin: 1px 1px 0px 2px;
-			height: 6px;
-			width: 2px;
+		&:before{
+			top: 0px;
+		}
 
-			// For the dots as the hour and minute seperator
+		// For the dot on the bottom of the container
 
-			&:before, &:after{
-				content: ' ';
-				position: absolute;
-				width: 2px;
-				height: 2px;
-				border-radius: 50%;
-				background: $iphone-black;
-			}
-
-			// For the dot on the top of the container
-
-			&:before{
-				top: 0px;
-			}
-
-			// For the dot on the bottom of the container
-
-			&:after{
-				bottom: 0px;
-			}
+		&:after{
+			bottom: 0px;
 		}
 	}
 }
