--- a/src/components/preloader/style.scss
+++ b/src/components/preloader/style.scss
@@ -42,8 +42,8 @@
 
 	// Change the default sizing of the knight animation to be a bit smaller
 
-	.horse__contain{
-		transform: scale(0.7);
+	.animation__horse--contain{
+		transform: scale(0.8);
 	}
 
 	// For the container of the horse animation
