--- a/src/components/assets/horse/style.scss
+++ b/src/components/assets/horse/style.scss
@@ -1,37 +1,8 @@
 
 @import "./src/global-css/variables/variables";
 
-.horse{
-	position: relative;
-    width: 477px;
-    height: 400px;
-    padding-top: 79px;
-    transform: scale(0.35);
-
-	// For the container of the legs on the bottom of the container
-
-	&__bottom{
-		position: relative;
-		width: 350px;
-		height: 170px;
-		transform: translateY(-32px);
-
-		// For the legs to sit on the right side of the container
-
-		&--legs{
-			position: absolute;
-			width: 250px;
-			top: 0;
-			right: 0;
-		}
-	}
-
-	svg{
-		fill: #fff;
-	}
-}
-
-// For the animation of the horse
+// For the master container of the knight animation preloader
+// For the placement of the horse to be in the middle of the screen
 
 .animation__horse{
 	@extend %display-flex;
@@ -42,97 +13,146 @@
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
+
+	// For the container of all of the content that sits in the center of the container
+	// Has the knight animation and the lines in the background
+
+	&--contain{
+		@extend %display-flex;
+		@extend %flex-center-all;
+		position: relative;
+		height: 200px;
+	}
 }
 
-.horse__contain{
-	@extend %display-flex;
-	@extend %flex-center-all;
+// This is the container of the knight and the horse
+
+.horse{
 	position: relative;
-	height: 200px;
-}
+	width: 477px;
+	height: 400px;
+	padding-top: 79px;
+	transform: scale(0.35);
 
-// For the horse lines, animating in the background
+	// Set the animation to be white
 
-.horse__lines{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 55%;
-	z-index: 0;
+	svg{ fill: #fff; }
 
-	@keyframes horse__line {
-		0%   { transform: translateX(-100%); }
-		100%   { transform: translateX(100%); }
+	// For the container of the legs on the bottom of the container
+
+	&__bottom{
+		position: relative;
+		width: 350px;
+		height: 170px;
+		transform: translateY(-32px);
+
+		// For the placement of the legs in the container
+		// We set to the right, because the head and neck strech out further than a center placement
+
+		&--legs{
+			position: absolute;
+			width: 250px;
+			top: 0;
+			right: 0;
+		}
 	}
 
-	// For the lines animating in the background
+	// For the horse lines, animating in the background
+	// These help to show the running movement of the horse by, expanding, contracting and moving lines
 
-	span{
+	&__lines{
 		position: absolute;
-		width: 40px;
-		height: 4px;
-		border-radius: 5px;
-		overflow: hidden;
-		animation: horse__line 700ms infinite cubic-bezier(.73,.25,.28,.73) forwards; 
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 55%;
+		z-index: 0;
 
-		// For the line to animate within the container
+		// For the animation shared between the lines
 
-		&:before{
-			content: ' ';
+		@keyframes horse__line {
+			0%   { transform: translateX( -100% ); }
+			100%   { transform: translateX( 100% ); }
+		}
+
+		// For the lines animating in the background
+
+		span{
 			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			background: #232323;
+			width: 40px;
+			height: 4px;
+			border-radius: 5px;
+			overflow: hidden;
 			animation: horse__line 700ms infinite cubic-bezier(.73,.25,.28,.73) forwards; 
-			transform-origin: center left;
-			transform: translateX(-100%);
-		}
 
-		&:first-child{
-			top: -20px;
-			left: 150px;
-		}
-
-		&:nth-child(2){
-			top: 40px;
-    		right: 100px;
-    		animation-delay: 200ms;
+			// For the line to animate within the container
 
 			&:before{
-				animation-delay: 200ms;
+				content: ' ';
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background: #232323;
+				animation: horse__line 700ms infinite cubic-bezier(.73,.25,.28,.73) forwards; 
+				transform-origin: center left;
+				transform: translateX(-100%);
 			}
-		}
 
-		&:nth-child(3){
-			top: 110px;
-    		left: 50px;
-    		animation-delay: 400ms;
+			// For the line on the top left
 
-			&:before{
+			&:first-child{
+				top: -20px;
+				left: 150px;
+			}
+
+			// For the line on the middle top right
+
+			&:nth-child(2){
+				top: 40px;
+			right: 100px;
+			animation-delay: 200ms;
+
+			// Delay the animation to stagger
+
+				&:before{ animation-delay: 200ms; }
+			}
+
+			// For the line right below the lance
+
+			&:nth-child(3){
+				top: 110px;
+				left: 50px;
 				animation-delay: 400ms;
+
+				// Delay the animation to stagger
+
+				&:before{ animation-delay: 400ms; }
 			}
-		}
 
-		&:nth-child(4){
-			right: 50px;
-			bottom: 0;
-			animation-delay: 600ms;
+			// For the line on the bottom right
 
-			&:before{
+			&:nth-child(4){
+				right: 50px;
+				bottom: 0;
 				animation-delay: 600ms;
+
+				// Delay the animation to stagger
+
+				&:before{ animation-delay: 600ms; }
 			}
-		}
 
-		&:nth-child(5){
-			right: 50px;
-			top: 0;
-			animation-delay: 800ms;
+			// For the line on the top right
 
-			&:before{
+			&:nth-child(5){
+				right: 50px;
+				top: 0;
 				animation-delay: 800ms;
+
+				// Delay the animation to stagger
+
+				&:before{ animation-delay: 800ms; }
 			}
 		}
 	}
