--- a/src/components/assets/icons/microphone/style.scss
+++ b/src/components/assets/icons/microphone/style.scss
@@ -91,11 +91,15 @@
 
 	&.icon__white{
 
+		// For the color of the top of the microphone to be white
+
 		.icon__mic-top{
 
 			&:before{ background: $white; }
 			span:before{ border-color: $white; }
 		}
+
+		// For the color of the bottom of the microphone to be white
 
 		.icon__mic-bottom{
 
