--- a/src/components/work/_projects/cardiact/process/style.scss
+++ b/src/components/work/_projects/cardiact/process/style.scss
@@ -6,6 +6,8 @@
 
 .block__process{
 	position: relative;
+	width: 90%;
+	margin: 0 auto;
 	padding-top: 100px;
 	color: $white;
 
@@ -18,9 +20,13 @@
 
 	.page__block{
 
+		// For the spacing between each of the process blocks
+
 		&:not(:last-child){
 			margin-bottom: 50px;
 		}
+
+		// For the container of all of the images within the process block
 
 		.hero__img{
 			@extend %display-flex;
@@ -62,6 +68,18 @@
 							width: 500px;
 							padding: 30px;
 							background: $white;
+						}
+					}
+
+					// Change the position and alignment of the images on tablet breakpoints
+
+					@media( max-width: 1023px ){
+						position: relative;
+						flex-wrap: wrap;
+						bottom: auto;
+
+						img:last-child{
+							transform: translateX( 0px );
 						}
 					}
 				}
