--- a/src/components/assets/devices/shared/browser/style.scss
+++ b/src/components/assets/devices/shared/browser/style.scss
@@ -135,6 +135,12 @@
 		line-height: 1.3;
 		font-size: 12px;
 
+		// Go full width on mobile breakpoints
+
+		@media( max-width: $mobile ){
+			width: 100%;
+		}
+
 		// For the text on the left side of the container
 		// Make the first " A " smaller
 
